# baremetal

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json_  CMakeSettings.json  LICENSE.md  README.md  baremetal.ld  baremetal.toolchain  qemu-rpi3.bat  qemu-rpi4.bat  qemu.bat  update-docs.bat
code/applications/demo/: CMakeLists.txt
code/applications/demo/src/: main.cpp  start.S
tutorial/: CMakeLists.txt
tutorial/00-build/: CMakeLists.txt
tutorial/00-build/create-image/: CMakeLists.txt
tutorial/01-building/: CMakeLists.txt
tutorial/01-building/create-image/: CMakeLists.txt
tutorial/01-demo/linux/: demo.elf  kernel8.img
tutorial/01-demo/windows/: kernel8.img
tutorial/02-setting-up-a-project/: CMakeLists.txt  baremetal.toolchain  link.ld  start.S
tutorial/02-setting-up-a-project/create-image/: CMakeLists.txt
tutorial/03-setting-up-project-structure/: CMakeLists.txt  CMakeSettings.json  baremetal.ld
tutorial/03-setting-up-project-structure/cmake/: functions.cmake
tutorial/03-setting-up-project-structure/code/applications/demo/: CMakeLists.txt
tutorial/03-setting-up-project-structure/code/libraries/: CMakeLists.txt
tutorial/04-setting-up-common-options/: CMakeLists.txt  CMakeSettings.json  baremetal.ld
tutorial/04-setting-up-common-options/cmake/: functions.cmake
tutorial/04-setting-up-common-options/code/: CMakeLists.txt
tutorial/04-setting-up-common-options/code/applications/demo/: CMakeLists.txt
tutorial/05-console-uart1/code/applications/demo/: CMakeLists.txt
tutorial/05-console-uart1/code/libraries/baremetal/: CMakeLists.txt
tutorial/05-setting-up-tools/code/applications/demo/: CMakeLists.txt
tutorial/06-console-uart1/code/applications/demo/: CMakeLists.txt
tutorial/06-console-uart1/code/libraries/: CMakeLists.txt
tutorial/06-console-uart1/code/libraries/baremetal/: CMakeLists.txt
tutorial/06-improving-startup-static-initialization/: CMakeLists.txt  baremetal.ld
tutorial/06-improving-startup-static-initialization/code/applications/: CMakeLists.txt
tutorial/06-improving-startup-static-initialization/code/applications/demo/: CMakeLists.txt
tutorial/06-improving-startup-static-initialization/code/libraries/baremetal/: CMakeLists.txt
tutorial/07-generalization/: .gitignore  baremetal.toolchain
tutorial/07-generalization/code/applications/demo/: CMakeLists.txt
tutorial/07-generalization/code/libraries/baremetal/: CMakeLists.txt
tutorial/07-improving-startup-static-initialization/code/applications/demo/: CMakeLists.txt
tutorial/07-improving-startup-static-initialization/code/libraries/baremetal/: CMakeLists.txt
tutorial/08-generalization/code/: CMakeLists.txt
tutorial/08-generalization/code/applications/demo/: CMakeLists.txt
tutorial/08-generalization/code/libraries/: CMakeLists.txt
tutorial/08-generalization/code/libraries/baremetal/: CMakeLists.txt
tutorial/08-generalization/code/libraries/stdlib/: CMakeLists.txt
tutorial/08-timer/code/applications/demo/: CMakeLists.txt
tutorial/08-timer/code/libraries/baremetal/: CMakeLists.txt
tutorial/09-mailbox/code/applications/demo/: CMakeLists.txt
tutorial/09-mailbox/code/libraries/baremetal/: CMakeLists.txt
tutorial/09-timer/code/applications/demo/: CMakeLists.txt
tutorial/09-timer/code/libraries/baremetal/: CMakeLists.txt
tutorial/09-timer/code/libraries/stdlib/: CMakeLists.txt
tutorial/10-mailbox/code/applications/demo/: CMakeLists.txt
tutorial/10-mailbox/code/libraries/baremetal/: CMakeLists.txt
tutorial/10-mailbox/code/libraries/stdlib/: CMakeLists.txt
tutorial/10-uart0/code/applications/demo/: CMakeLists.txt
tutorial/11-doxygen/: doxygen.conf  header.html
tutorial/11-doxygen/code/applications/demo/: CMakeLists.txt
tutorial/11-doxygen/code/libraries/baremetal/: CMakeLists.txt
tutorial/11-uart0/code/applications/demo/: CMakeLists.txt
tutorial/11-uart0/code/libraries/baremetal/: CMakeLists.txt
tutorial/11-uart0/code/libraries/stdlib/: CMakeLists.txt
tutorial/12-console/code/applications/demo/: CMakeLists.txt
tutorial/12-console/code/libraries/baremetal/: CMakeLists.txt
tutorial/12-console/code/libraries/stdlib/: CMakeLists.txt
tutorial/12-logger/code/applications/demo/: CMakeLists.txt
tutorial/12-logger/code/libraries/baremetal/: CMakeLists.txt
tutorial/12-logger/code/libraries/stdlib/: CMakeLists.txt
tutorial/13-board-information/code/applications/demo/: CMakeLists.txt
tutorial/13-board-information/code/libraries/baremetal/: CMakeLists.txt
tutorial/13-board-information/code/libraries/stdlib/: CMakeLists.txt
tutorial/13-logger/code/applications/demo/: CMakeLists.txt
tutorial/13-logger/code/libraries/baremetal/: CMakeLists.txt
tutorial/13-logger/code/libraries/stdlib/: CMakeLists.txt
tutorial/14-board-information/code/applications/demo/: CMakeLists.txt
tutorial/14-board-information/code/libraries/baremetal/: CMakeLists.txt
tutorial/14-board-information/code/libraries/stdlib/: CMakeLists.txt
tutorial/14-memory-management/code/applications/demo/: CMakeLists.txt
tutorial/14-memory-management/code/libraries/baremetal/: CMakeLists.txt
tutorial/14-memory-management/code/libraries/stdlib/: CMakeLists.txt
tutorial/15-memory-management/code/applications/demo/: CMakeLists.txt
tutorial/15-memory-management/code/libraries/baremetal/: CMakeLists.txt
tutorial/15-memory-management/code/libraries/stdlib/: CMakeLists.txt
tutorial/15-string/code/applications/demo/: CMakeLists.txt
tutorial/15-string/code/libraries/baremetal/: CMakeLists.txt
tutorial/15-string/code/libraries/stdlib/: CMakeLists.txt
tutorial/16-serialization-and-formatting/code/applications/demo/: CMakeLists.txt
tutorial/16-unit-tests/code/libraries/: CMakeLists.txt
tutorial/18-timer-extension/code/libraries/: CMakeLists.txt
tutorial/18-writing-unit-tests/code/applications/: CMakeLists.txt
tutorial/21-i2c/code/libraries/: CMakeLists.txt
tutorial/22-i2c/code/libraries/: CMakeLists.txt
tutorial/25-writing-unit-tests/code/libraries/: CMakeLists.txt
tutorial/demo/: kernel8.img
tutorial/demo/windows/: demo.elf
(+1542 files in other folders)
