message(STATUS "\n**********************************************************************************\n")
message(STATUS "\n## In directory: ${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(04-setting-up-common-options)
add_subdirectory(05-setting-up-tools)
add_subdirectory(06-console-uart1)
add_subdirectory(07-improving-startup-static-initialization)
add_subdirectory(08-generalization)
add_subdirectory(09-timer)
add_subdirectory(10-mailbox)
add_subdirectory(11-uart0)
add_subdirectory(12-logger)
add_subdirectory(13-board-information)
add_subdirectory(14-memory-management)
add_subdirectory(15-string)
add_subdirectory(16-serializing-and-formatting)
add_subdirectory(17-exceptions)
add_subdirectory(18-interrupts)
add_subdirectory(19-timer-extension)
